# A2A_MCP

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Auditor_CLI.ipynb  CI_VALIDATION_REPORT.md  CMakeLists.txt  Dockerfile  Dockerfile.server  INDEX.md  Makefile  PR_BODY.md  README.md  UNITY_MLOPS_SETUP.md  a2a_mcp.db  check_duplicates.py  check_duplicates_deep.py  cie_runbook_stub.md  conftest.py  content_integrity_eval.json  create_fixtures.sh  debug_artifact.py  detect_duplicates_final.py  docker-compose.yml  error.txt  hash_gen_scroll.py  knowledge_ingestion.py  mcp_core.py  mcp_server.py  merge_receipt_pr268.sh  mlops_unity_pipeline.py  package-lock.json  package.json  phase_space_tick.py  pnpm-lock.yaml  pyproject.toml  pytest_sys_path.txt  rbac.db  (+14 more)
.out/: capsule.scene.ethereal_wrap.v1.frozen.json  resolver.audit.jsonl  scrollstream_ledger.jsonl  scrollstream_ledger.normalized.jsonl  scrollstream_ledger.normalized.qube.jsonl
a2a_mcp/: __init__.py
a2a_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adaptco-core-orchestrator/: .eslintrc.json  README.md  package-lock.json  package.json
adaptco-ssot/: README.md
adk/: contracts_index.json
agency_hub/: __init__.py  docking_shell.py  tensor_field.py
agent/: validate.mjs
agents/: __init__.py  coder.py  gemini_agent.py  managing_agent.py  pinn_agent.py  ralph_agent.py  tester.py  trained_model_agent.py
app/: main.py  mcp_gateway.py  mcp_tooling.py  multi_client_api.py  orchestrator_agent.py  server.py  vector_ingestion.py
artifacts/: cie_v1_audit.metrics.jsonl  cie_v1_smoke.metrics.jsonl
avatar.controlbus.synthetic.engineer.v1/: SPEC.md  prompt-kernel.md  test_harness.py
avatars/: __init__.py  avatar.py  registry.py  setup.py
base44/: grid.py
capsule/: body.json
capsule.ops.branch_s.v1/: Makefile  README.md  apply_and_seal.sh  manifest.json  reissue_branch_s.sh  revoke_branch_s.sh
capsules/: capsule.anomaly.trace.v1.json  capsule.orbit.remix.mesh.novatrace.v1.json  capsule.prompt.designStudio.dual.v1.json  capsule.rehearsal.scrollstream.v1.json  capsule.rehearsal.trace.override004.v1.json
codex_qernel/: __init__.py  config.py  runtime.py
docs/: ADAPTCO_OS_WRAPPER.md  API.md  CHANGELOG.md  SSOT_Binder.md  cie_runbook_stub.md  content_integrity_eval_runbook.md  design_studio_dual_capsule.md  google_doc_access.md  qtrust_v3_9_8_protocol.html  triadic_backbone_visualization.md  virtual-display-driver.md  wham_plus_one_formal_spec_v0.md
examples/: freeze-dispatch.js
fixtures/: snapshot.json  snapshot.json.meta.sha256
frontend/: index.html  package-lock.json  package.json
ghost-void/: DOCKER_ALIGNMENT_VERIFICATION.md  DOCKER_COMPLETE_VERIFICATION.md  FINAL_VERIFICATION_CHECKLIST.md  TASKS_CONFIGURATION_VERIFICATION.md  compose.debug.yaml  docker-compose.yml  phase_space_tick.py
hooks/: ralph_hook.py
infra/: secrets.sample.env
judge/: __init__.py  decision.py
jurassic_pixels/: parker_train.py
lib/: bindings.js
manifests/: content.integrity.eval.v1.yaml  content_integrity_eval.json  deployed.yaml
mcp_servers/: gemini_control.py
middleware/: __init__.py  events.py  fossil_chain.py  genie_adapter.py  runtime.py
openapi/: openapi.yaml
orchestrator/: __init__.py  api.py  common_thread.py  event_store.py  intent_engine.py  judge_orchestrator.py  llm_util.py  main.py  metrics.py  multimodal_rag_workflow.py  observers.py  runtime_bridge.py  settlement.py  stateflow.py  storage.py  utils.py  verify_api.py  webhook.py  whatsapp.py
pipeline/: docker-compose.yml
rbac/: client.py  rbac_service.py  storage.py
runtime/: capsule.kobe.cipher.v1.sha256  capsule.registry.runtime.v1.json  cie_v1_smoke.log.jsonl  freeze_manifest.json  hud_events.jsonl  scrollstream_ledger.jsonl
schemas/: __init__.py  database.py  model_artifact.py  project_plan.py  runtime_event.py
scripts/: check_drift.py  check_merge_conflicts.py  cie_v1_domain_swap_protocol.py  codex_qernel.py  concept_arch_review.py  export-audit-ledger.js  freeze_dual_capsules.sh  freeze_kobe_cipher.sh  gemini_os_runner.sh  index_project.py  knowledge_ingestion.py  repo_audit.py  requirements.txt  run_cie_v1_smoke.py  run_harness.sh  sign_bindings.sh  smoke_ws.sh  test_arcstate_schema.py  trigger_recursive_action.py  validate_ssot.py
server/: index.js  ledger.js  server.js
specs/: base44_map.yaml  judge_criteria.yaml  loader.py  supra_specs.yaml
src/: main.cpp  multi_client_router.py
telemetry/: sentry_sink.py
(+246 files in other folders)
