[project]
name = "a2a-mcp"
version = "0.2.0"
description = "Multi-agent orchestrator with MCP tooling, stateflow FSM, and self-healing pipelines"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "httpx",
    "requests",
    "jsonschema",
    "mcp[cli]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src", "."]
addopts = "-q --doctest-modules"
